# web-midi-controller

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  LAYOUTS.md  README.md  TODOS.md  deno.json  embedder.ts  flake.nix  main.ts  main.tsx  overlays.json  package.json
backend/: Cargo.toml
clock/: deno.json  main.ts
common/: deno.json  main.ts
compat-tests/: Cargo.toml  index.html  package.json  tsconfig.node.json  vite.config.ts
definitions/: Cargo.toml  default.nix  deno.json  main.ts  package.json
hdj-ios-debug/: tsconfig.app.json  vite.config.ts
hdj-ios-web/: package.json  tsconfig.node.json  vite.config.ts
homebrewdj/: .gitignore  clock.ts  config.json  config.nix.json  default.nix  deno.json  deno.jsonc  homebrewdj.ts  index.html  main.ts  osc.ts  package.json  sequencer.ts  server.ts  static.ts
launchpad-driver/: default.nix  deno.json  main.ts
lp-seq/: deno.json  main.ts
midi-driver/: .gitignore  Cargo.toml  README.md  build.rs  cbindgen.toml  default.nix  deno.json  deno_mod.ts  ffi.ts  index.js  index.ts  main.ts  mod.ts  monitor.ts  package.json  package.node.json
midi-driver/src/: lib.rs  logging.rs
midi-driver/src/midi/: messages.rs  mod.rs  system.rs
overlay-editor/: package.json
overlays/: 8x8-midi-grid.toml  ableton-performance.json  ableton-performance.toml  fullscreen-xypad-note.toml  fullscreen-xypad.toml  grid.json  nested-test.json  test.toml  (+8 more)
server/: .gitignore  Cargo.toml  args.ts  default.nix  deno.json  event_handler.ts  frontend.ts  main.ts  messages.ts  result  server.nix  state.ts
server/src/: args.rs  main.rs
(+341 files in other folders)
