[package]
name = "midi-controller"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.8", features = ["tracing", "ws"] }
axum-extra = { version = "0.12.5", features = ["typed-header"] }
clap = { version = "4.5.54", features = ["derive"] }
dashmap = "6.1.0"
env_logger = "0.11.8"
headers = "0.4.1"
include_dir = "0.7.4"
midir = "0.10.3"
serde = { version = "1.0.228", features = ["serde_derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
tower = "0.5.3"
tower-http = "0.6.8"
tower-serve-static = "0.1.1"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
uuid = { version = "1.20.0", features = ["v4"] }
