[package]
name = "midi-driver"
version = "0.1.0"
edition = "2024"

[build-dependencies]
cbindgen = "0.29.2"

[dependencies]
midir = "0.10.3"
once_cell = "1.21.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
ts-rs = "12.0.1"

[lib]
crate-type = ["cdylib"]
