[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
clap = "4.5.57"
midi-controller = { path = "../backend" }
tokio = { version = "1.49.0", features = ["full"] }
tower-http = "0.6.8"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
